# sample-ideas

./: .gitignore  pyproject.toml
book_database/: manage.py
book_database/book_covers/: 500x_sWB4uHr.jfif
book_database/book_database/: asgi.py  settings.py  urls.py  wsgi.py
book_database/books/: forms.py  models.py  urls.py  views.py
book_database/books/migrations/: 0001_initial.py  0002_book_slug.py
book_database/books/templates/books/: add_book.html  book_details.html
calculator/calculator/: settings.py  urls.py
calculator/calculator_app/: urls.py  views.py
calculator/calculator_app/templates/calculator_app/: calculator.html
weight_tracker/: db.sqlite3  urls.py
weight_tracker/weight_tracker/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
weight_tracker/weight_tracker/migrations/: 0001_initial.py
weight_tracker/weight_tracker/templates/: plot_timeseries.html  top_10_timeseries.html  weight_entry.html
