[tool.poetry]
name = "sample-ideas"
version = "0.1.0"
description = ""
authors = ["Gonçalo Santos <gmfa.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
plotly = "^5.18.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
